src/test/deca/context/invalid/Objet/invalidSelection.des
The selection must relate to an object of type class
